fixes overlay for better readability

--- a/client/src/components/TeamCardPlayerCard/TeamCardPlayerCard.scss
+++ b/client/src/components/TeamCardPlayerCard/TeamCardPlayerCard.scss
@@ -46,7 +46,7 @@
 
     &__player-name {
         font-weight: 500;
-        font-size: 0.8rem;
+        font-size: 0.7rem;
         margin-right: 0.5rem;
         width: 5.5rem;
 
